Add type support with Interface ITodo
