# todo-server/src/todo.model.ts
@@ -1,9 +1,14 @@
 import * as mongoose from 'mongoose';
 
+interface ITodo {
+    _id: string;
+    description: string;
+}
+
 const TodoSchema = new mongoose.Schema({
     description: String
 });
 
 const TodoModel = mongoose.model('Todo', TodoSchema);
 
-export { TodoModel };
+export { TodoModel, ITodo };
